apps/production/blog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: default
  labels:
    app: blog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: blog
    spec:
      serviceAccountName: blog
      automountServiceAccountToken: false
      containers:
        - name: blog
          image: ghcr.io/arjansiemons/hugo-site@sha256:7a5a338c8789e5d653db6d8655ba84e5069c787eb90504b059e7217d9a345693 # {"$imagepolicy": "flux-system:blog"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/
            - name: tmp-volume
              mountPath: /tmp
            - name: var-cache-nginx
              mountPath: /var/cache/nginx
            - name: var-run
              mountPath: /var/run
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 101  # Nginx user ID
            runAsGroup: 101  # Nginx group ID
            capabilities:
              drop: ["ALL"]
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
      volumes:
        - name: nginx-config
          configMap:
            name: blog-nginx-config
        - name: tmp-volume
          emptyDir: {}
        - name: var-cache-nginx
          emptyDir:
            medium: Memory  # Faster performance and ensures it's writable
        - name: var-run
          emptyDir: {}
