apps/production/blog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: default
  labels:
    app: blog
spec:
  selector:
    app: blog
  ports:
    - name: http
      port: 80
      targetPort: http
